Address security vulnerabilites following security review. And some linting