@@ -1,17 +1,16 @@
 package us.calubrecht.lazerwiki.controller;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.util.Pair;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import jakarta.servlet.http.HttpServletRequest;
-import us.calubrecht.lazerwiki.model.PageDesc;
-import us.calubrecht.lazerwiki.model.PerfTracker;
-import us.calubrecht.lazerwiki.model.RecentChangesResponse;
+import us.calubrecht.lazerwiki.model.*;
 import us.calubrecht.lazerwiki.requests.MovePageRequest;
 import us.calubrecht.lazerwiki.responses.*;
-import us.calubrecht.lazerwiki.model.User;
 import us.calubrecht.lazerwiki.requests.SavePageRequest;
 import us.calubrecht.lazerwiki.service.*;
 import us.calubrecht.lazerwiki.service.exception.PageReadException;
@@ -19,6 +18,7 @@ import us.calubrecht.lazerwiki.service.exception.PageRevisionException;
 import us.calubrecht.lazerwiki.service.exception.PageWriteException;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.security.Principal;
 import java.util.List;
@@ -43,9 +43,14 @@ public class PageController {
     @Autowired
     PageLockService pageLockService;
 
+    @Autowired
+    UserService userService;
+
+    final Logger logger = LogManager.getLogger(getClass());
+
     @RequestMapping(value = {"/get/{pageDescriptor}", "/get/"})
     public PageData getPage(@PathVariable Optional<String> pageDescriptor, Principal principal, HttpServletRequest request ) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
         PerfTracker tracker = new PerfTracker();
         PageData pd = renderService.getRenderedPage(url.getHost(), pageDescriptor.orElse(""), userName, tracker);
@@ -59,7 +64,7 @@ public class PageController {
 
     @RequestMapping(value = {"/history/{pageDescriptor}", "/history/"})
     public ResponseEntity<List<PageDesc>> getPageHistory(@PathVariable Optional<String> pageDescriptor, Principal principal, HttpServletRequest request ) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
         try {
             return ResponseEntity.ok(pageService.getPageHistory(url.getHost(), pageDescriptor.orElse(""), userName));
@@ -70,14 +75,14 @@ public class PageController {
 
     @RequestMapping(value = {"/getHistorical/{pageDescriptor}/{revision}", "/getHistorical/{revision}"})
     public PageData getPageHistorical(@PathVariable Optional<String> pageDescriptor, @PathVariable long revision, Principal principal, HttpServletRequest request ) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
         return renderService.getHistoricalRenderedPage(url.getHost(), pageDescriptor.orElse(""), revision, userName);
     }
 
     @RequestMapping(value = {"/diff/{pageDescriptor}/{rev1}/{rev2}", "/diff/{rev1}/{rev2}"})
     public ResponseEntity<List<Pair<Integer,String>>> getPageDiff(@PathVariable Optional<String> pageDescriptor, @PathVariable Long rev1, @PathVariable Long rev2, Principal principal, HttpServletRequest request ) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
         try {
             return ResponseEntity.ok(pageService.getPageDiff(url.getHost(), pageDescriptor.orElse(""), rev1, rev2, userName));
@@ -88,8 +93,11 @@ public class PageController {
 
     @PostMapping(value = { "/savePage", "{pageDescriptor}/savePage"})
     public PageData savePage(@PathVariable Optional<String> pageDescriptor, Principal principal, HttpServletRequest request, @RequestBody SavePageRequest body) throws MalformedURLException, PageWriteException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
+        if (userName.equals(User.GUEST)) {
+            logger.info("Guest user {} saving page {}", request.getRemoteAddr(), pageDescriptor.orElse("ROOT"));
+        }
         try {
             PerfTracker tracker = new PerfTracker();
             renderService.savePage(url.getHost(), pageDescriptor.orElse(""), body.getText(), body.getTags(), body.getRevision(), body.isForce(), userName);
@@ -104,48 +112,52 @@ public class PageController {
 
     @DeleteMapping("{pageDescriptor}")
     public void deletePage(@PathVariable String pageDescriptor, Principal principal, HttpServletRequest request) throws MalformedURLException, PageWriteException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = principal.getName();
         pageUpdateService.deletePage(url.getHost(), pageDescriptor, userName);
     }
 
     @RequestMapping(value = "/listPages")
     public PageListResponse listPages(Principal principal, HttpServletRequest request) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
         return pageService.getAllPages(url.getHost(), userName);
     }
 
     @RequestMapping(value = "/listNamespaces/{site}")
-    public PageListResponse listNamespaces(Principal principal, @PathVariable("site") String site, HttpServletRequest request) {
+    public ResponseEntity<PageListResponse> listNamespaces(Principal principal, @PathVariable("site") String site, HttpServletRequest request) {
         String userName = getUsername(principal);
-        return pageService.getAllNamespaces(site, userName);
+        User user = userService.getUser(userName);
+        if (!user.getRolesString().contains("ROLE_ADMIN") && !user.getRolesString().contains("ROLE_ADMIN:" + site)) {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+        }
+        return ResponseEntity.ok(pageService.getAllNamespaces(site, userName));
     }
 
     @RequestMapping(value = "/recentChanges")
     public RecentChangesResponse recentChanges(Principal principal, HttpServletRequest request) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
         return pageService.recentChanges(url.getHost(), userName);
     }
 
     @RequestMapping(value = "/searchPages")
     public Map<String, List<SearchResult>> searchPages(Principal principal, HttpServletRequest request, @RequestParam("search") String searchTerm) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
         return pageSearchService.searchPages(url.getHost(), userName, searchTerm);
     }
 
     @RequestMapping(value = "/listTags")
     public List<String> listTags(Principal principal, HttpServletRequest request) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
         return pageService.getAllTags(url.getHost(), userName);
     }
 
     @PostMapping(value = {"/previewPage/{pageDescriptor}", "/previewPage/"})
     public PageData previewPage(@PathVariable Optional<String> pageDescriptor, Principal principal, HttpServletRequest request, @RequestBody SavePageRequest body) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = principal.getName();
         PerfTracker tracker = new PerfTracker();
         return renderService.previewPage(url.getHost(), pageDescriptor.orElse(""), body.getText(), userName, tracker);
@@ -153,20 +165,21 @@ public class PageController {
 
     @PostMapping(value = {"/lock/{pageDescriptor}", "/lock/"})
     public PageLockResponse lockPage(@PathVariable Optional<String> pageDescriptor, Principal principal, HttpServletRequest request, @RequestParam Optional<Boolean> overrideLock) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = getUsername(principal);
         return pageLockService.getPageLock(url.getHost(), pageDescriptor.orElse(""), userName, overrideLock.orElse(false));
     }
 
     @PostMapping(value = {"/releaseLock/{pageDescriptor}/id/{lock}", "/releaseLock/id/{lock}"})
-    public void releaseLock(@PathVariable Optional<String> pageDescriptor, @PathVariable String lock, HttpServletRequest request) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
-        pageLockService.releasePageLock(url.getHost(), pageDescriptor.orElse(""), lock);
+    public void releaseLock(@PathVariable Optional<String> pageDescriptor, Principal principal, @PathVariable String lock, HttpServletRequest request) throws MalformedURLException {
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
+        String userName = getUsername(principal);
+        pageLockService.releasePageLock(url.getHost(), pageDescriptor.orElse(""), lock, userName);
     }
 
     @PostMapping(value = {"/{pageDescriptor}/movePage"})
     public MoveStatus movePage(@PathVariable String pageDescriptor, Principal principal, HttpServletRequest request, @RequestBody MovePageRequest movePageRequest) throws MalformedURLException, PageWriteException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String userName = principal.getName();
         return pageUpdateService.movePage(url.getHost(), userName, movePageRequest.oldNS(), movePageRequest.oldPage(), movePageRequest.newNS(), movePageRequest.newPage());
     }
