@@ -14,6 +14,7 @@ import us.calubrecht.lazerwiki.service.UserService;
 import us.calubrecht.lazerwiki.service.exception.VerificationException;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.security.Principal;
 import java.util.Map;
@@ -32,20 +33,20 @@ public class UserSettingsController {
         {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
         }
-        userService.resetPassword(user.userName, passwordRequest.password());
+        userService.resetPassword(user.userName, passwordRequest.password(), user);
         return ResponseEntity.ok(new SetPasswordResponse(true, ""));
     }
 
     @PostMapping("resetForgottenPassword")
     public ResponseEntity<SetPasswordResponse> setPassword(@RequestBody UserRequest passwordRequest,  HttpServletRequest request) throws MalformedURLException, MessagingException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         userService.requestResetForgottenPassword(passwordRequest.userName(), url.getHost(),  passwordRequest.email(), passwordRequest.password());
         return ResponseEntity.ok(new SetPasswordResponse(true, ""));
     }
 
     @PostMapping("saveEmail")
     public ResponseEntity<SaveEmailResponse> saveEmail(Principal principal, @RequestBody UserRequest emailRequest,  HttpServletRequest request) throws MalformedURLException, MessagingException {
-        URL url = new URL(request.getRequestURL().toString());
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         User user = userService.getUser(principal.getName());
         if (!user.userName.equals(emailRequest.userName()))
         {
